<resources>
    <string name="oneButton">1</string>
    <string name="twoButton">2</string>
    <string name="threeButton">3</string>
    <string name="fourButton">4</string>
    <string name="fiveButton">5</string>
    <string name="sixButton">6</string>
    <string name="sevenButton">7</string>
    <string name="eightButton">8</string>
    <string name="nineButton">9</string>
    <string name="zeroButton">0</string>
    <string name="dotButton">.</string>
    <string name="equalButton">=</string>
    <string name="divisionButton">÷</string>
    <string name="MultiplicationButton">×</string>
    <string name="summationButton">+</string>
    <string name="subtractionButton">-</string>
    <string name="app_name">Simple Calculator</string>
    <string name="operandsArea"></string>
    <string name="resultArea"></string>
    <string name="deleteButton">Del</string>

</resources>
